<resources>
    <string name="app_name">Homework06</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dept">Department :</string>
    <string name="rb1">CS</string>
    <string name="rb2">SIS</string>
    <string name="rb3">BIO</string>
    <string name="rb4">Others</string>
    <string name="save">Save</string>
    <string name="myAvatar">My Avatar</string>
    <string name="name">Name :</string>
    <string name="studentid">Student ID :</string>
    <string name="edit">Edit</string>
</resources>
